# doi-meta-retriever

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-workflow.yaml
src/doi_meta_retriever/: __init__.py
test/: test_core_data_resolution.py  test_file_fetcher.py  test_online.py
